# ros-projects

./: .gitignore  olympic_rings.txt  tb3.rviz
Fibonacci/: fibonacci.cc
ros2_ws/bagfiles/numbers.bag/: metadata.yaml  numbers.bag_0.db3
ros2_ws/src/action_tutorials_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/action_tutorials_cpp/src/: action_client.cpp  action_server.cpp
ros2_ws/src/action_tutorials_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/cpp_srvcli/: CMakeLists.txt  package.xml
ros2_ws/src/cpp_srvcli/src/: add_two_ints_client.cpp  add_two_ints_server.cpp
ros2_ws/src/examples/: CMakeLists.txt  package.xml
ros2_ws/src/examples/src/: publisher.cpp  subscriber.cpp
ros2_ws/src/learning_tf2_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/learning_tf2_cpp/launch/: turtle_tf2_demo.launch.py
ros2_ws/src/learning_tf2_cpp/src/: turtle_tf2_broadcaster.cpp  turtle_tf2_listener.cpp
ros2_ws/src/minmax/: CMakeLists.txt  package.xml
ros2_ws/src/minmax/src/: max.cpp  min.cpp  minmax.cpp
ros2_ws/src/stats/: CMakeLists.txt  package.xml
ros2_ws/src/stats/src/: mean.cpp  median.cpp  min_max.cpp  mode.cpp
ros2_ws/src/sum/: package.xml
ros2_ws/src/sum/src/: sum.cpp
tb3_ws/bagfiles/rosbag2_2023_03_02-09_40_05.bag/: metadata.yaml  rosbag2_2023_03_02-09_40_05_0.db3
tb3_ws/src/intrusion/: CMakeLists.txt  package.xml
tb3_ws/src/intrusion/launch/: monitor.launch.py
tb3_ws/src/intrusion/src/: monitor.cpp
tb3_ws/src/obstacles/: CMakeLists.txt  package.xml
tb3_ws/src/obstacles/launch/: detector_test.launch.py  single_launch.launch.py  triple_detector.launch.py
tb3_ws/src/obstacles/src/: avoidance.cpp  detector.cpp
tb3_ws/src/olympic/: CMakeLists.txt  package.xml
tb3_ws/src/olympic/src/: rings.cpp  rings_action_client.cpp  rings_action_server.cpp
tb3_ws/src/olympic_interfaces/: CMakeLists.txt  package.xml
tb3_ws/src/olympic_interfaces/action/: Rings.action
tb3_ws/src/persons/: CMakeLists.txt  package.xml
tb3_ws/src/persons/launch/: person_follower.launch.py
tb3_ws/src/persons/src/: detector.cpp  follower.cpp
tb3_ws/src/robot_trajectory/: CMakeLists.txt  package.xml
tb3_ws/src/robot_trajectory/launch/: hexagon.launch.py  polygon.launch.py  spiral.launch.py  square.launch.py
tb3_ws/src/robot_trajectory/src/: polygon.cpp  polygon_old.cpp  spiral.cpp  spiral_inside.cpp  square.cpp  square_odom.cpp  wandering.cpp
urdf/: 01-myfirst.urdf  02-multipleshapes.urdf  03-origins.urdf  04-materials.urdf  07-physics.urdf  turtlebot3_burger.urdf
